--- a/sass/components/_bunch.scss
+++ b/sass/components/_bunch.scss
@@ -10,24 +10,50 @@
     transition: all 0.3s ease-in;
     outline-offset: 1rem;
 
+    @include respond(tab-port) {
+      width: 32%;
+      float: left;
+      position: relative;
+      box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+    }
+
     &--photo1 {
       top: -2rem;
       left: 0;
+
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.2);
+      }
     }
 
     &--photo2 {
       top: 2rem;
       right: 3rem;
+
+      @include respond(tab-port) {
+        top: -1rem;
+        left: -2rem;
+        transform: scale(1.3);
+        z-index: 20;
+      }
     }
 
     &--photo3 {
       top: 10rem;
       left: 20%;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        left: -2.5rem;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
       z-index: 12;
-      transform: scale(1.1);
+      transform: translateY(-0.5rem) scale(1.1);
+      outline: 1.5rem solid $color-primary;
     }
   }
 
