--- a/sass/main.css
+++ b/sass/main.css
@@ -190,6 +190,10 @@ body {
   transition: all 0.3s ease-in-out;
   letter-spacing: 0.2rem;
 }
+.section-one-heading:hover {
+  transform: scale(1.1) skewY(2.5deg) skewX(13deg);
+  text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
+}
 
 .headings {
   font-weight: 700;
@@ -270,6 +274,11 @@ body {
 }
 .btn-arrow:hover {
   transform: translate(3px);
+  background-color: #55c57a;
+  color: #fff;
+}
+.btn-arrow:active {
+  transform: translateY(0);
 }
 
 .photo-bunch {
@@ -284,21 +293,51 @@ body {
   transition: all 0.3s ease-in;
   outline-offset: 1rem;
 }
+@media only screen and (max-width: 56.25em) {
+  .photo-bunch__photo {
+    width: 32%;
+    float: left;
+    position: relative;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
+}
 .photo-bunch__photo--photo1 {
   top: -2rem;
   left: 0;
+}
+@media only screen and (max-width: 56.25em) {
+  .photo-bunch__photo--photo1 {
+    top: 0;
+    transform: scale(1.2);
+  }
 }
 .photo-bunch__photo--photo2 {
   top: 2rem;
   right: 3rem;
 }
+@media only screen and (max-width: 56.25em) {
+  .photo-bunch__photo--photo2 {
+    top: -1rem;
+    left: -2rem;
+    transform: scale(1.3);
+    z-index: 20;
+  }
+}
 .photo-bunch__photo--photo3 {
   top: 10rem;
   left: 20%;
 }
+@media only screen and (max-width: 56.25em) {
+  .photo-bunch__photo--photo3 {
+    top: 1rem;
+    left: -2.5rem;
+    transform: scale(1.1);
+  }
+}
 .photo-bunch__photo:hover {
   z-index: 12;
-  transform: scale(1.1);
+  transform: translateY(-0.5rem) scale(1.1);
+  outline: 1.5rem solid #55c57a;
 }
 .photo-bunch:hover .photo-bunch__photo:not(:hover) {
   transform: scale(0.9);
@@ -311,6 +350,7 @@ body {
   text-align: center;
   font-size: 1.6rem;
   background-color: rgba(255, 255, 255, 0.7);
+  transition: transform 0.3s;
 }
 .section-two-card__icon {
   display: inline-block;
@@ -319,6 +359,9 @@ body {
   font-size: 6rem;
   background-image: linear-gradient(to right, #7ed56f, #28b485);
   -webkit-background-clip: text;
+}
+.section-two-card:hover {
+  transform: translateY(-1.3rem) scale(1.07);
 }
 
 .header {
@@ -370,25 +413,47 @@ body {
 .row:not(:last-child) {
   margin-bottom: 8rem;
 }
-.row .col-1-of-2 {
-  width: calc((100% - 6rem) / 2);
+@media only screen and (max-width: 56.25em) {
+  .row:not(:last-child) {
+    margin-bottom: 6rem;
+  }
 }
-.row .col-1-of-3 {
-  width: calc((100% - 2 * 6rem) / 3);
+@media only screen and (max-width: 56.25em) {
+  .row {
+    max-width: 50rem;
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: column;
+  }
 }
-.row .col-2-of-3 {
-  width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
-}
-.row .col-1-of-4 {
-  width: calc((100% - 3 * 6rem) / 4);
-}
-.row .col-1-of-4:not(:last-child) {
+.row [class^=col-]:not(:last-child) {
   margin-right: 6rem;
 }
-.row .col-2-of-4 {
+@media only screen and (max-width: 56.25em) {
+  .row [class^=col-]:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 6rem;
+  }
+}
+.row [class^=col-] .col-1-of-2 {
+  width: calc((100% - 6rem) / 2);
+}
+.row [class^=col-] .col-1-of-3 {
+  width: calc((100% - 2 * 6rem) / 3);
+}
+.row [class^=col-] .col-2-of-3 {
+  width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
+}
+.row [class^=col-] .col-1-of-4 {
+  width: calc((100% - 3 * 6rem) / 4);
+}
+.row [class^=col-] .col-1-of-4:not(:last-child) {
+  margin-right: 6rem;
+}
+.row [class^=col-] .col-2-of-4 {
   width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem);
 }
-.row .col-3-of-4 {
+.row [class^=col-] .col-3-of-4 {
   width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
 
@@ -397,6 +462,11 @@ body {
   margin-bottom: 10rem;
   padding: 24rem 0;
   background-color: #f4f4f4;
+}
+@media only screen and (max-width: 56.25em) {
+  .section-one {
+    padding: 19rem 0;
+  }
 }
 
 .section-two {
@@ -407,4 +477,9 @@ body {
 }
 .section-two > * {
   transform: skewY(6deg);
+}
+@media only screen and (max-width: 56.25em) {
+  .section-two {
+    padding: 10rem 0;
+  }
 }/*# sourceMappingURL=main.css.map */
