--- a/sass/layout/_panel.scss
+++ b/sass/layout/_panel.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
   }
-  // @include clearfix;
+  @include clearfix;
 
   [class^="col-"] {
     &:not(:last-child) {
@@ -28,32 +28,31 @@
         margin-bottom: $gap-rl;
       }
     }
+  }
+  .col-1-of-2 {
+    width: calc((100% - #{$gap-rl}) / 2);
+  }
 
-    .col-1-of-2 {
-      width: calc((100% - #{$gap-rl}) / 2);
-    }
+  .col-1-of-3 {
+    width: calc((100% - 2 * #{$gap-rl}) / 3);
+  }
 
-    .col-1-of-3 {
-      width: calc((100% - 2 * #{$gap-rl}) / 3);
-    }
+  .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * #{$gap-rl}) / 3) + #{$gap-rl});
+  }
 
-    .col-2-of-3 {
-      width: calc(2 * ((100% - 2 * #{$gap-rl}) / 3) + #{$gap-rl});
+  .col-1-of-4 {
+    width: calc((100% - 3 * #{$gap-rl}) / 4);
+    &:not(:last-child) {
+      margin-right: 6rem;
     }
+  }
 
-    .col-1-of-4 {
-      width: calc((100% - 3 * #{$gap-rl}) / 4);
-      &:not(:last-child) {
-        margin-right: 6rem;
-      }
-    }
+  .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * #{$gap-rl}) / 4) + #{$gap-rl});
+  }
 
-    .col-2-of-4 {
-      width: calc(2 * ((100% - 3 * #{$gap-rl}) / 4) + #{$gap-rl});
-    }
-
-    .col-3-of-4 {
-      width: calc(3 * ((100% - 3 * #{$gap-rl}) / 4) + 2 * #{$gap-rl});
-    }
+  .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * #{$gap-rl}) / 4) + 2 * #{$gap-rl});
   }
 }
