--- a/sass/main.css
+++ b/sass/main.css
@@ -426,6 +426,11 @@ body {
     flex-direction: column;
   }
 }
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .row [class^=col-]:not(:last-child) {
   margin-right: 6rem;
 }
@@ -435,30 +440,30 @@ body {
     margin-bottom: 6rem;
   }
 }
-.row [class^=col-] .col-1-of-2 {
+.row .col-1-of-2 {
   width: calc((100% - 6rem) / 2);
 }
-.row [class^=col-] .col-1-of-3 {
+.row .col-1-of-3 {
   width: calc((100% - 2 * 6rem) / 3);
 }
-.row [class^=col-] .col-2-of-3 {
+.row .col-2-of-3 {
   width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
 }
-.row [class^=col-] .col-1-of-4 {
+.row .col-1-of-4 {
   width: calc((100% - 3 * 6rem) / 4);
 }
-.row [class^=col-] .col-1-of-4:not(:last-child) {
+.row .col-1-of-4:not(:last-child) {
   margin-right: 6rem;
 }
-.row [class^=col-] .col-2-of-4 {
+.row .col-2-of-4 {
   width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem);
 }
-.row [class^=col-] .col-3-of-4 {
+.row .col-3-of-4 {
   width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
 
 .section-one {
-  margin-top: -2rem;
+  margin-top: -9rem;
   margin-bottom: 10rem;
   padding: 24rem 0;
   background-color: #f4f4f4;
@@ -470,7 +475,7 @@ body {
 }
 
 .section-two {
-  margin-top: -10rem;
+  margin-top: -18rem;
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.7), rgba(40, 180, 133, 0.7)), url(../img/nat-4.jpg);
   transform: skewY(-6deg);
